# pulse-overlay

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
extension/: README.md  background.js  content.js  manifest.json
extension/icons/: generate-icons.html
extension/options/: options.css  options.html  options.js
extension/overlay/: graph.js  overlay.css  overlay.js
extension/popup/: popup.css  popup.html  popup.js
extension/shared/: constants.js  state.js
server/: README.md  config.example.toml  pyproject.toml
server/pulse_server/: __init__.py  __main__.py  ble.py  config.py  log.py  parser.py  server.py
server/tests/: __init__.py  conftest.py  helpers.py  test_ble.py  test_config.py  test_log.py  test_main.py  test_parser.py  test_server.py
