[project]
name = "pulse-server"
version = "0.1.0"
description = "BLE Heart Rate Monitor WebSocket Server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "PulseOverlay Authors"}
]
keywords = [
    "ble",
    "bluetooth",
    "heart-rate",
    "heart-rate-monitor",
    "websocket",
    "fitness",
    "health",
    "wearable",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "bleak>=0.21.1",
    "websockets>=12.0",
]

[project.scripts]
pulse-server = "pulse_server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
]

[project.urls]
Homepage = "https://github.com/religa/pulse-overlay"
Repository = "https://github.com/religa/pulse-overlay"
Issues = "https://github.com/religa/pulse-overlay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pulse_server"]

[tool.pyright]
include = ["pulse_server"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
